--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <%- include("partials/header.ejs") %>
 
 <!--HOME PAGE-->
+<h1>Write your post here:</h1>
 
 <!--Generate a new post-->
 <div id="newPostContainer" class="container">
@@ -13,18 +14,42 @@
 
 <!--Post listing-->
 <div id="postListing" class="container">
-    <ul>
-        <%for (var i = 0; i < postListing.length; ++i) { %>
-            <li>
-                <div class="singlePostContainer">
-                        <h2><% posts %></h2>
-                        <div id="deleteIcon"></div>
-                        <div id="editIcon"></div>
-                        <div id="openIcon"></div>
-                </div>
-            </li>
-        <%}%>
-    </ul>
+    <%if (locals.posts) {%>
+        <ul>
+            <%for (var i = 0; i < locals.posts.length; ++i) { %>
+                <li>
+                    <div class="singlePostContainer">
+                        <% if (locals.editIndex == i ) { %>
+                            <!--Edit post functionality | edit form-->
+                            <form action="/update" method="POST">
+                                <input type="hidden" name="index" value="<%= i %>">
+                                <input type="text" name="updatedPost" value="<%= posts[i] %>">
+                                <button type="submit">Update</button>
+                                <button type="button" onclick="window.location.href='/'">Cancel</button>
+                                <!--Voidaanko laittaa tähän kohtaan editIndex=null??-->
+                            </form>
+                        <% } else { %>
+                            <h2><%= posts[i] %></h2>
+                            <!--Delete post-->
+                            <form method="POST" action="/delete">
+                                <input type="hidden" name="delete" value="<%= i %>">
+                                <button type="submit"><i class="fas fa-trash-alt"></i></button>
+                            </form>
+                            <!--Edit post-->
+                            <form method="POST" action="/edit">
+                                <input type="hidden" name="edit" value="<%= i %>">
+                                <button type="submit"><i class="fas fa-pencil-alt"></i></button>
+                            </form>
+                        <% } %>
+                    </div>
+                </li>
+            <%}%>
+        </ul>
+
+    <%} else {%>
+        <h2>Nothing to show</h2>
+    <%}%>
+
 </div>
 
 
