--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Stylesheet-->
     <link rel="stylesheet" href="styles/main.css">
+    <!--FontAwesome-->
+    <!-- Include Font Awesome in your HTML -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Post app</title>
 </head>
 <body>
