--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,8 +6,11 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="styles/main.css">
     <!--FontAwesome-->
-    <!-- Include Font Awesome in your HTML -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!--Font | Raleway-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Post app</title>
 </head>
 <body>
